<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Achievmaps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="url_text">https://justsomephp.000webhostapp.com/</string>


    <string name="wrong_user_text">Nieprawidłowy nick!</string>
    <string name="add_text">Dodaj</string>
    <string name="delete_text">Usuń</string>
    <string name="yes_text">Tak</string>
    <string name="no_text">Nie</string>
    <string name="send_button_text">Wyślij</string>
    <string name="back_button_text">Wróć</string>
    <string name="close_button_text">Zamknij</string>
    <string name="continue_button_text">Dalej</string>
    <string name="welcome_text">Witaj użytkowniku!</string>
    <string name="unknown_error_text">Wystąpił nieznany błąd</string>
    <string name="first_page_text">&#60;&#60;</string>
    <string name="next_page_text">&#60;</string>
    <string name="previous_page_text">&#62;</string>
    <string name="reset_page_text">&#8634;</string>


    <string name="nick_field_text">Nickname</string>
    <string name="password_field_text">Hasło</string>
    <string name="email_field_text">E-mail</string>
    <string name="repeat_password_field_text">Powtórz hasło</string>

    <string name="login_button_text">Zaloguj</string>
    <string name="register_button_text">Zarejestruj</string>
    <string name="password_recovery_button_text">Zapomniałeś hasła?</string>
    <string name="remember_me_text">Zapamiętaj</string>

    <string name="password_recovery_text">Wpisz email konta, którego\nhasło chcesz odzyskać</string>
    <string name="recovery_code_sent_text" tools:ignore="Typos">Kod odzyskiwania wysłany\nna podany adres e-mail!</string>

    <string name="basic_validation_text">Coś poszło nie tak</string>

    <string name="database_conn_error3_text">Błąd połączenia z bazą danych, error nr. 3</string>
    <string name="database_conn_error2_text">Błąd połączenia z bazą danych, error nr. 2</string>
    <string name="login_wrong_email_or_password_text">Błędny email lub hasło!</string>

    <string name="wrong_email_text">Nieprwidłowy e-mail!</string>
    <string name="nick_too_short_text">Nick musi mieć co najmniej 5 znaków!</string>
    <string name="password_too_short_text">Hasło musi mieć co najmniej 8 znaków!</string>
    <string name="passwords_not_equal_text">Hasła nie są ze sobą zgodne!</string>
    <string name="register_email_already_exist_text">Email jest już w bazie danych!</string>
    <string name="register_nick_already_exist_text">Nick jest już zajęty!</string>
    <string name="register_success_text">Rejestracja przebiegła\npomyślnie!</string>

    <string name="please_wait_text">Trwa ładowanie</string>


    <string name="go_to_map_activity">Przejdź do mapy</string>
    <string name="go_to_news_activity">Nowości i wydarzenia</string>
    <string name="go_to_achievements_activity">Twoje osiągnięcia</string>
    <string name="go_to_friends_activity">Przejdź do znajomych</string>
    <string name="go_to_ranking_activity">Pozycja w rankingu</string>


    <string name="app_name_description">Nazwa aplikacji w formie stylizowanej</string>
    <string name="bg_description">Tło</string>

    <string name="scroll_description">Scroll</string>
    <string name="map_image_description">Obraz mapy</string>
    <string name="news_image_description">Obraz news</string>
    <string name="achievements_image_description">Obraz osiągnięcia</string>
    <string name="friends_image_description">Obraz przyjaciele</string>
    <string name="ranking_image_description">Obraz ranking</string>


    <string name="ranking_screen_text">Ranking</string>
    <string name="rankingall_text">Ogólny</string>
    <string name="rankingnature_text">Natura</string>
    <string name="rankingarchitecture_text">Zabytki</string>
    <string name="ranking_points_text">Punkty</string>
    <string name="ranking_position_text">Pozycja</string>


    <string name="friends_screen_text">Znajomi</string>
    <string name="friends_pointsall_text">Ogólne</string>
    <string name="add_friend_text">Wpisz nick użytkownika\ndo dodania do znajomych</string>
    <string name="delete_friend_text">Wpisz nick użytkownika\ndo usunięcia ze znajomych</string>
    <string name="already_friends_text">Już jesteście znajomymi!</string>
    <string name="not_friends_text">Nie jesteście znajomymi!</string>
    <string name="friend_added_text">Dodano do znajomych!</string>
    <string name="friend_deleted_text">Usunięto ze znajomych!</string>


    <string name="news_screen_text">Nowości i wydarzenia</string>


    <string name="achievements_screen_text">Osiągnięcia</string>
    <string name="achievement_name_text">Nazwa</string>
    <string name="achievement_description_text">Opis</string>
    <string name="achievement_points_text">Punkty</string>


    <string name="help_text">Pomoc</string>
    <string name="route_text">Trasa</string>
    <string name="help_page1_text" tools:ignore="Typos">Mapa domyślnie wyświetla twoją aktualną lokalizację. Przesuwaj mapę jednym palcem. Aby przybliżyć mapę użyj dwóch palców i zbliż je do krawędzi ekranu. Aby oddalić mapę zbliż oba palce do środka ekranu.</string>
    <string name="help_page2_text">Aby powrócić do twojej lokalizacji naciśnij zielony przycisk odświerzenia w prawym dolnym rogu ekranu.</string>
    <string name="help_page3_text">Czerwone pinezki na mapie oznaczają obiekty które możesz odwiedzić aby zdobyć punkty. Naciśnij na pinezkę aby zobaczyć okno z nazwą i opisem obiektu. Jeśli jesteś blisko obiektu pojawi się tam także przycisk dodania obiektu do listy odwiedzonych. W ten sposób możesz zdobyć punkty które podwyższą twoją pozycję w rankingu! Jeśli nie jesteś dostatecznie blisko w jego miejscu pojawi się przycisk zamknięcia okna. Nie musisz zamykać okna i otwierać okna ponownie żeby przycisk się zaktualizował. Kiedy podejdziesz bliżej obiektu przycisk zmieni się nawet kiedy okno jest już otwarte!</string>
    <string name="help_page4_text">To wszystko co musisz wiedzieć aby używać aplikacji. Nie pozostało ci nic innego niż odwiedzić pobliskie zabytki, a następnie zaplanować gdzie wyjedziesz na wakacje.\n\nNie zapomnij zabrać ze sobą telefonu z zainstalowaną aplikacją oraz dobrego aparatu :)</string>
    <string name="location_required_text">Dostep do lokalizacji jest wymagany do działania aplikacji!</string>
    <string name="add_achievement_text">Zdobądź punkty</string>
    <string name="marker_tmp_title_text">SCP-087</string>
    <string name="marker_tmp_description_text" tools:ignore="TypographyDashes">SCP-087 has undergone four video recorded explorations by Class-D personnel. Each subject conducting an exploration has encountered SCP-087-1, which appears as a face with no visible pupils, nostrils, or mouth. The nature of SCP-087-1 is entirely unclear, but it has been determined that it is not the source of the pleading. Subjects exhibit feelings of intense paranoia and fear when faced with SCP-087-1, but it is undetermined whether said feelings are abnormal or simply natural reactions.</string>
    <string name="got_achievement_text">Osiągnięcie zdobyte! Sprwdź swoje osiągnięcia w zakładce osiągnięć w menu!</string>

    <string name="route_not_found_error_text">Nie można wyznaczyć trasy. Spróbuj innego środka transportu lub rozpocznij podróż z innego miejsca.</string>
    <string name="time_common_text1">Na miejscu będziesz o godzinie</string>
    <string name="time_common_text2">Czy chcesz zmienić czas wyruszenia?</string>
    <string name="time_not_enough_text">Może nie starczyć czasu na zwiedzanie.</string>
    <string name="time_too_early_text">Obiekt nie będzie jeszcze otwarty.</string>
    <string name="time_too_late_text">Obiekt będzie już zamknięty.</string>

    <string name="origin_text">Wpisz miejsce rozpoczęcia podróży</string>
    <string name="here_text">Aktualne</string>
    <string name="there_text">Wpisane</string>
    <string name="transit_begin_text">p. początkowy</string>
    <string name="transit_name_text">linia</string>
    <string name="transit_end_text">p. końcowy</string>
    <string name="travel_method_text">Wybierz sposób podróży</string>
    <string name="walking_text">pieszo</string>
    <string name="driving_text">autem</string>
    <string name="transit_text">t. miejski</string>
    <string name="time_text">Data i czas rozpoczęcia</string>
    <string name="start_route_text">Rozpocznij</string>
    <string name="map_url_text">https://maps.googleapis.com/maps/api/directions/json?origin=</string>
</resources>