<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context=".achievementsScreen.AchievementsScreen">

    <ImageView
        android:id="@+id/AchievementsScreenBg"
        android:layout_width="536dp"
        android:layout_height="891dp"
        android:contentDescription="@string/bg_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693"
        app:srcCompat="@drawable/tlo_fale3" />

    <TextView
        android:id="@+id/AchievementsScreenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/achievements_screen_text"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/AchievementsTop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AchievementsScreenText">

        <TextView
            android:id="@+id/AchievementName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:fontFamily="@font/aclonica"
            android:text="@string/achievement_name_text"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/AchievementDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/aclonica"
            android:text="@string/achievement_description_text"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/AchievementPoints"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:fontFamily="@font/aclonica"
            android:text="@string/achievement_points_text"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/AchievementsScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/scroll_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AchievementsTop">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/AchievementsView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/AchievementsLoadingScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/info_box"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/AchievementsLoadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_wait_text"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/AchievementsProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="147dp"
            android:layout_height="127dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:indeterminateTint="@color/button_green"
            android:indeterminateTintMode="src_atop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AchievementsLoadingText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/AchievementsErrorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/error_box"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/AchievementsErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_error_text"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/AchievementsErrorCloseButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/button_red"
            android:onClick="closeAchievementsErrorLayout"
            android:text="@string/close_button_text"
            android:visibility="visible"
            app:cornerRadius="@dimen/button_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AchievementsErrorText"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>